[gd_scene load_steps=4 format=3 uid="uid://5p624wsr7m2d"]

[ext_resource type="PackedScene" uid="uid://rij5bvmvffnm" path="res://scenes/ui/components/app_button.tscn" id="1_2q4dh"]
[ext_resource type="Script" path="res://scenes/ui/menus/settings_menu.gd" id="1_r4niq"]
[ext_resource type="PackedScene" uid="uid://dwq1a2sardnvl" path="res://scenes/ui/components/app_slider.tscn" id="2_lo7k2"]

[node name="SettingsMenu" type="CanvasLayer"]
layer = 2
script = ExtResource("1_r4niq")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"WUTitleStatPanelContainer"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_constants/outline_size = 9
theme_override_font_sizes/font_size = 10
text = "Settings"
horizontal_alignment = 1
autowrap_mode = 2

[node name="OptionsContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SfxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/OptionsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/OptionsContainer/SfxContainer"]
layout_mode = 2
text = "SFX Volume"

[node name="SfxSlider" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/OptionsContainer/SfxContainer" instance=ExtResource("2_lo7k2")]
unique_name_in_owner = true
layout_mode = 2
sound_on_drag_end = true

[node name="MusicContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/OptionsContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/OptionsContainer/MusicContainer"]
layout_mode = 2
text = "Music Volume"

[node name="MusicSlider" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/OptionsContainer/MusicContainer" instance=ExtResource("2_lo7k2")]
unique_name_in_owner = true
layout_mode = 2
audio_bus_name = "Music"
sound_on_drag_end = true

[node name="WindowContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/OptionsContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/OptionsContainer/WindowContainer"]
layout_mode = 2
text = "Window Mode"

[node name="WindowButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/OptionsContainer/WindowContainer" instance=ExtResource("1_2q4dh")]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
text = "Windowed"

[node name="BackButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("1_2q4dh")]
unique_name_in_owner = true
layout_mode = 2
text = "Back"
